[gd_scene load_steps=3 format=3 uid="uid://btgxi8k7u8yxd"]

[ext_resource type="Script" uid="uid://da62ma071hm4q" path="res://addons/graph_editor/tool_dock/tool_dock.gd" id="1_o4s3t"]
[ext_resource type="Theme" uid="uid://ci35nwtsakm61" path="res://addons/graph_editor/Theme.tres" id="2_diri2"]

[node name="ToolDock" type="Control" node_paths=PackedStringArray("grid_l", "position_l", "mesh_counter_l", "x_range_l", "y_range_l", "z_range_l", "snap_button")]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
script = ExtResource("1_o4s3t")
grid_l = NodePath("VBoxContainer/HBoxContainer/GridSize")
position_l = NodePath("VBoxContainer/MeshPosition")
mesh_counter_l = NodePath("VBoxContainer/MeshCounter")
x_range_l = NodePath("VBoxContainer/XRange")
y_range_l = NodePath("VBoxContainer/YRange")
z_range_l = NodePath("VBoxContainer/ZRange")
snap_button = NodePath("VBoxContainer/Snapping")

[node name="VBoxContainer" type="VBoxContainer" parent="."]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2

[node name="HBoxContainer" type="HBoxContainer" parent="VBoxContainer"]
layout_mode = 2

[node name="Minus" type="Button" parent="VBoxContainer/HBoxContainer"]
custom_minimum_size = Vector2(32, 0)
layout_mode = 2
theme = ExtResource("2_diri2")
text = "-"

[node name="GridSize" type="Label" parent="VBoxContainer/HBoxContainer"]
layout_mode = 2
size_flags_horizontal = 3
theme = ExtResource("2_diri2")
text = "Grid Size: 16"
horizontal_alignment = 1

[node name="Plus" type="Button" parent="VBoxContainer/HBoxContainer"]
custom_minimum_size = Vector2(32, 0)
layout_mode = 2
theme = ExtResource("2_diri2")
text = "+"

[node name="MeshCounter" type="Label" parent="VBoxContainer"]
layout_mode = 2
theme = ExtResource("2_diri2")
text = "Mesh Count: 0"
horizontal_alignment = 1

[node name="CreateBoxMesh" type="Button" parent="VBoxContainer"]
layout_mode = 2
theme = ExtResource("2_diri2")
text = "Create Box Mesh"

[node name="DestoryBoxMesh" type="Button" parent="VBoxContainer"]
layout_mode = 2
theme = ExtResource("2_diri2")
text = "Destory Box Mesh"

[node name="DuplicateMesh" type="Button" parent="VBoxContainer"]
layout_mode = 2
theme = ExtResource("2_diri2")
text = "Duplicate Mesh"

[node name="MeshPosition" type="Label" parent="VBoxContainer"]
layout_mode = 2
theme = ExtResource("2_diri2")
text = "Position (0.0, 0.0)"

[node name="XRange" type="Label" parent="VBoxContainer"]
layout_mode = 2
theme = ExtResource("2_diri2")
text = "X range: -"

[node name="YRange" type="Label" parent="VBoxContainer"]
layout_mode = 2
theme = ExtResource("2_diri2")
text = "Y range: -"

[node name="ZRange" type="Label" parent="VBoxContainer"]
layout_mode = 2
theme = ExtResource("2_diri2")
text = "Z range: -"

[node name="Snapping" type="Button" parent="VBoxContainer"]
layout_mode = 2
theme = ExtResource("2_diri2")
text = "Snapping: Disabled"

[connection signal="pressed" from="VBoxContainer/HBoxContainer/Minus" to="." method="_on_minus_pressed"]
[connection signal="pressed" from="VBoxContainer/HBoxContainer/Plus" to="." method="_on_plus_pressed"]
[connection signal="pressed" from="VBoxContainer/CreateBoxMesh" to="." method="_on_create_box_mesh_pressed"]
[connection signal="pressed" from="VBoxContainer/DestoryBoxMesh" to="." method="_on_destory_box_mesh_pressed"]
[connection signal="pressed" from="VBoxContainer/DuplicateMesh" to="." method="_on_duplicate_mesh_pressed"]
[connection signal="pressed" from="VBoxContainer/Snapping" to="." method="_on_snapping_pressed"]
